--- a/discoveryservice/pom.xml
+++ b/discoveryservice/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>deliveryservice</artifactId>
+    <artifactId>discoveryservice</artifactId>
 
 
     <properties>
