--- a/delivery-front-grails/grails-app/conf/application.yml
+++ b/delivery-front-grails/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web
     codegen:
-        defaultPackage: delivery.front
+        defaultPackage: delivery.front.grails
     gorm:
         reactor:
             # Whether to translate GORM events into Reactor events
