created simple ui to view list of clients

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>deliveriesservice</module>
         <module>marketservice</module>
         <module>deliveryfrontwicket</module>
+        <module>gatewayservice</module>
     </modules>
 
 </project>
